SafetyBackup Found a bug where sometimes when switching designs it stays stuck

--- a/src/components/DesignPageComponents/designs/styleSheets/hytaleDesign.scss
+++ b/src/components/DesignPageComponents/designs/styleSheets/hytaleDesign.scss
@@ -7,6 +7,7 @@
     top: 0;
     z-index: 3;
     height: 100vh;
+    max-height: 1350px;
     max-width: 2400px;
     overflow-y: scroll;
     overflow-x: hidden;
@@ -560,6 +561,7 @@
         top: 0;
         z-index: -1;
         height: 100vh;
+        max-height: 1350px;
         max-width: 2400px;
         width: 100vw;
         background-image: url("../../../../assets/images/Desert.jpg");
@@ -944,9 +946,24 @@
 }
 @media (max-width: 900px){
     .hytaleDesignContainer{
+        position: absolute;
         height: 100%;
         overflow: unset;
         background-color: #000000;
+        padding-bottom: 5rem;
+
+        .hytaleBackground{
+            position: fixed;
+            transition: 0.2s ease-in-out;
+            opacity: 0;
+            pointer-events: none;
+            z-index: 10;
+            height: 100vh;
+            width: 100vw;
+            max-width: 2400px;
+            max-height: 1350px;
+            background-color: black;
+        }
         .hytaleDesignBlackBackground{
             position: absolute;
             z-index: -1;
