--- a/src/components/DesignPageComponents/styleSheets/cookDesignPreview.scss
+++ b/src/components/DesignPageComponents/styleSheets/cookDesignPreview.scss
@@ -328,7 +328,7 @@
     
 
             .comingSoonContainer{
-                position: fixed;
+                position: absolute;
                 top: 0;
                 opacity: 0;
                 pointer-events: none;
